syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/okoroemeka/la-candela-backend-rpc/pb";

message User {
  string email = 1;
  string password = 2;
  string first_name = 3;
  string last_name = 4;
  google.protobuf.Timestamp password_changed_at = 5;
  google.protobuf.Timestamp created_at = 6;
  bool isEmailVerified = 7;
  string id = 8;
}